--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "12.0.10",
     "react": "17.0.2",
