--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.26.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "12.0.10",
     "react": "17.0.2",
