--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.26.0",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rss-parser": "^3.12.0"
