--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^5.1.4",
+    "react-rewards": "^1.1.2",
     "rss-parser": "^3.12.0"
   },
   "devDependencies": {
